<resources>
    <string name="app_name">News Articles Search</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="hint">Enter search query</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_type">News Desk Values</string>
    <string name="arts_type">Arts</string>
    <string name="fashion_style_type">Fashion &amp; Style</string>
    <string name="sports_type">Sports</string>
    <string name="save">Save</string>
</resources>
